[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gp-tempest"
version = "0.1.0"
description = "Gaussian Process Temporal Embedding for Protein Simulations and Transitions"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Georg Diez" },
]
keywords = [
    "molecular dynamics",
    "dimensionality reduction",
    "variational autoencoder",
    "gaussian process",
    "machine learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "prettypyplot>=0.10.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "tqdm>=4.60.0",
]

[project.scripts]
tempest = "gptempest.main:main"

[project.optional-dependencies]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-include-markdown-plugin",
]

[project.urls]
Paper = "https://doi.org/10.1063/5.0282147"
Repository = "https://github.com/moldyn/GP-TEMPEST"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
